--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Intro section with dropdown navigation</title>
+  <title>Intro section</title>
   <link rel="stylesheet" href="./css/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
-
-  Features
-  Company
-  Careers
-  About
-
-  Login
-  Register
-
-  Make remote work
-
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
-
-  Learn more
+  <nav class="navbar">
+    <ul class="navbar--main">
+      <img src="" alt="logo">
+      <li>Features</li>
+      <li>Company</li>
+      <li>Careers</li>
+      <li>About</li>
+    </ul>
+    <ul class="navbar--login">
+      <li>Login</li>
+      <li>Register</li>
+    </ul>
+  </nav>
+  <main>
+    <figure>
+      <img src="" alt="Guy looking at a laptop">
+    </figure>
+    <section>
+      <h1>Make remote work</h1>
+      <p>Get your team in sync, no matter your location. Streamline processes, 
+        create team rituals, and watch productivity soar.</p>
+      <a href="">Learn more</a>
+      <footer>
+        <img src="" alt="databiz">
+        <img src="" alt="audio phile">
+        <img src="" alt="meet">
+        <img src="" alt="maker">
+      </footer>
+    </section>
+  </main>  
 </body>
 </html>
