--- a/public/index.html
+++ b/public/index.html
@@ -9,24 +9,43 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet"> 
+  <script defer src="./js/main.js"></script>
 </head>
 <body>
   <nav class="navbar">
     <img class="navbar__logo" src="./images/logo.svg" alt="logo">
-    <button class="navbar__menu">
+    <button id="menu" class="navbar__menu">
       <img class="navbar__image" src="./images/icon-menu.svg" alt="menu">
     </button>
-    <div class="navbar__container">
-      <ul class="navbar--main">
-        <li class="navbar__item">Features</li>
-        <li class="navbar__item">Company</li>
-        <li class="navbar__item">Careers</li>
-        <li class="navbar__item">About</li>
-      </ul>
-      <ul class="navbar--login">
-        <li class="navbar__item">Login</li>
-        <li class="navbar__item">Register</li>
-      </ul>
+    <div class="navbar__container hidden">
+      <div class="navbar__content">
+        <img src="./images/icon-close-menu.svg" alt="close">
+        <ul class="navbar--main">
+          <li class="navbar__item">
+            <h2>Features <img src="./images/icon-arrow-up.svg"></h2>
+            <ul>
+              <li class="navbar__item--todo">Todo list</li>
+              <li class="navbar__item--calendar">Calendar</li>
+              <li class="navbar__item--reminder">Reminders</li>
+              <li class="navbar__item--planning">Planning</li>
+            </ul>
+          </li>
+          <li class="navbar__item">
+            <h2>Company <img src="./images/icon-arrow-up.svg"></h2>
+            <ul>
+              <li>History</li>
+              <li>Our team</li>
+              <li>Blog</li>
+            </ul>
+          </li>
+          <li class="navbar__item">Careers</li>
+          <li class="navbar__item">About</li>
+        </ul>
+        <ul class="navbar--login">
+          <li class="navbar__item">Login</li>
+          <li class="navbar__item">Register</li>
+        </ul>
+      </div>
     </div>
   </nav>
   <main class="hero hero__container">
