add navbar style on mobile layout

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
     </button>
     <div class="navbar__container hidden">
       <div class="navbar__content">
-        <img src="./images/icon-close-menu.svg" alt="close">
+        <img id="close-btn" class="navbar__close" src="./images/icon-close-menu.svg" alt="close">
         <ul class="navbar--main">
           <li class="navbar__item">
-            <h2>Features <img src="./images/icon-arrow-up.svg"></h2>
+            <h2 class="navbar__title">Features <img class="navbar__arrow navbar__arrow--up" src="./images/icon-arrow-up.svg"></h2>
             <ul>
               <li class="navbar__item--todo">Todo list</li>
               <li class="navbar__item--calendar">Calendar</li>
@@ -31,7 +31,7 @@
             </ul>
           </li>
           <li class="navbar__item">
-            <h2>Company <img src="./images/icon-arrow-up.svg"></h2>
+            <h2 class="navbar__title">Company <img class="navbar__arrow navbar__arrow--up" src="./images/icon-arrow-up.svg"></h2>
             <ul>
               <li>History</li>
               <li>Our team</li>
@@ -43,7 +43,7 @@
         </ul>
         <ul class="navbar--login">
           <li class="navbar__item">Login</li>
-          <li class="navbar__item">Register</li>
+          <li class="navbar__item navbar__item--register">Register</li>
         </ul>
       </div>
     </div>
