--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
       <div class="navbar__content">
         <img id="close-btn" class="navbar__close" src="./images/icon-close-menu.svg" alt="close">
         <ul class="navbar--main">
-          <li class="navbar__item">
-            <h2 class="navbar__title">Features <img class="navbar__arrow navbar__arrow--up" src="./images/icon-arrow-up.svg"></h2>
-            <ul>
+          <li class="navbar__item ">
+            <h2 class="navbar__title">Features <img class="navbar__arrow navbar__arrow--up turn-up" src="./images/icon-arrow-up.svg"></h2>
+            <ul id="features" class="navbar__item--sublist hidden">
               <li class="navbar__item--todo">Todo list</li>
               <li class="navbar__item--calendar">Calendar</li>
               <li class="navbar__item--reminder">Reminders</li>
@@ -31,8 +31,8 @@
             </ul>
           </li>
           <li class="navbar__item">
-            <h2 class="navbar__title">Company <img class="navbar__arrow navbar__arrow--up" src="./images/icon-arrow-up.svg"></h2>
-            <ul>
+            <h2 class="navbar__title">Company <img class="navbar__arrow navbar__arrow--up turn-up" src="./images/icon-arrow-up.svg"></h2>
+            <ul id="company" class="navbar__item--sublist hidden">
               <li>History</li>
               <li>Our team</li>
               <li>Blog</li>
