add active states and fix styling on hero and navbar

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
       <img class="hero__image" src="./images/image-hero-mobile.png" alt="Guy looking at a laptop">
     </picture>
     <section class="hero__section">
-      <h1 class="hero__title">Make remote work</h1>
+      <h1 class="hero__title"><span>Make</span> remote work</h1>
       <p class="hero__description">Get your team in sync, no matter your location. Streamline processes, 
         create team rituals, and watch productivity soar.</p>
       <a class="hero__button" href="#">Learn more</a>
